fixed scrollbars being invisible *again* (forgot to change values)

--- a/AlanWalkerTheme/scrollbar.css
+++ b/AlanWalkerTheme/scrollbar.css
@@ -30,9 +30,7 @@
 #app-mount .thin_d125d2::-webkit-scrollbar-track,
 #app-mount .thin__99f8c::-webkit-scrollbar-thumb,
 #app-mount .thin__99f8c::-webkit-scrollbar-track {
-  background-clip: padding-box;
-  border: 4px solid transparent;
-  border-radius: var(--border-radius-m);
+  border: 2px solid transparent;
 }
 #app-mount *::-webkit-scrollbar-track {
   border-width: medium;
